# aquilion

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.cargo/: config.toml
bootloader/: Cargo.toml  Makefile  README.md  boot.asm  print_string_rm.asm
bootloader/esp/: NvVars  kernel
bootloader/esp/efi/: NvVars
bootloader/esp/efi/boot/: bootx64.efi
bootloader/functions/: print_string.asm
bootloader/src/: main.rs
kernel/.cargo/: config.toml
kernel/src/: main.rs
src/: lib.rs  vga_buffer.rs
src/arch/x86/: boot.asm  linker.ld  long_mode_init.asm
src/arch/x86_64/: boot.asm  grub.cfg  multiboot_header.asm
src/kernel/: Cargo.toml
src/kernel/src/: kmain.rs  macros.rs
src/kernel/src/hal/: mbi.rs  mod.rs  vga_buffer.rs
src/kernel/src/hal/mem/: frame_allocator.rs  mod.rs
