[workspace]
resolver = "2"
members = [
    "src/kernel"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["The Maintainers of Aquilion"]
homepage = "https://github.com/lemosep"

[workspace.dependencies]
spin = "0.9.8"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"