[workspace]
resolver = "2"
members = [
    "src/kernel"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["The Maintainers of Aquilion"]
homepage = "https://github.com/lemosep"

[workspace.dependencies]
multiboot2 = { version = "0.23.1", default-features = false }
spin = "0.9.8"
x86_64 = "0.15.2"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
