[package]
name = "kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Aquilion kernel"
homepage.workspace = true

[lib]
name = "kernel"
path = "src/kmain.rs"  
crate-type = ["staticlib"]

[dependencies]
multiboot2 = { workspace = true }
spin = { workspace = true }
x86_64 = { workspace = true }

